--- a/Aplicação.dproj
+++ b/Aplicação.dproj
@@ -129,6 +129,7 @@
             <Form>FrmChoice</Form>
             <FormType>dfm</FormType>
         </DCCReference>
+        <DCCReference Include="uCommom.pas"/>
         <BuildConfiguration Include="Release">
             <Key>Cfg_2</Key>
             <CfgParent>Base</CfgParent>
